# mori97.github.io

./: .gitignore  .travis.yml  Cargo.toml  README.md  package.json  wasm.d.ts  wasm.js  wasm_bg.wasm  wasm_bg.wasm.d.ts
src/: app.rs  lib.rs  route.rs
src/components/: bio_side_block.rs  collapsible_content.rs  cv.rs  demo.rs  home.rs  mod.rs  navbar.rs  publications.rs  skills.rs
static/: index.html  style.css
